Remove emoji from title and intro text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="utf-8" />
-  <title>Hôm nay chị muốn ăn gì? 💕</title>
+  <title>Hôm nay chị muốn ăn gì? </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     /*
@@ -398,7 +398,7 @@
     <div class="intro-box" role="status" aria-live="polite">
       <div class="intro-mascot" aria-hidden="true">🐱</div>
       <div>
-        <div class="intro-text">Chào chị! 💕</div>
+        <div class="intro-text">Chào chị! </div>
         <div class="intro-sub">Chọn món và gửi cho em nhé — bắt đầu nào!</div>
       </div>
     </div>
