Update food recommendations in getTimeRecommendation

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
       const now = new Date();
       const h = now.getHours() + now.getMinutes()/60;
       if (h >= 5 && h < 10.5) return ["Phở", "Bún", "Bánh mì", "Xôi", "Mì"];
-      if (h >= 10.5 && h < 14.5) return ["Cơm", "Mì cay", "Lẩu nhẹ", "Bún", "Nhịn"];
+      if (h >= 10.5 && h < 14.5) return ["Cơm", "Mì cay", "Lẩu", "Bún", "Nhịn(Trà Sữa)"];
       if (h >= 14.5 && h < 21) return ["Nướng", "Lẩu", "Ốc", "Trà sữa", "Ăn vặt"];
       return ["Mì", "Đồ ăn nhẹ"];
     }
