Modify textarea placeholder for notes
Updated the placeholder text in the note textarea.

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
       </div>
 
       <div class="label">Ghi thêm cho em nè (không bắt buộc):</div>
-      <textarea id="note" placeholder="VD: không cay, thêm phô mai, gần nhà em thôi..." aria-label="Ghi chú"></textarea>
+      <textarea id="note" placeholder="VD: không cay, ít đường, ít đá, gần nhà em thôi..." aria-label="Ghi chú"></textarea>
 
       <div class="btn-wrap">
         <button id="sendBtn" aria-live="polite" type="button">
